🧽 Chore ➾ Migration from ECAD Labs (#1884)
* Support the latest version of Deno, which is 1.34.1 at this time

* Adjusted requirements for Deno version

* Don't build binaries and upload to GCP

* Use GH default macos-latest runner instead of ecad-macminis

* In CICD, install docker client using homebrew on macos

* Fix detection of macos runner

* Install and start colima on macos

* Updated CLA workflow

* Adjusted issue workflow

* Branding update

* Updated ts-pattern to the latest version


* Updated flextesa image used by tezos-client plugin to the latest version

* Don't upload VSIX to GCP. Extend jest timeouts in CI

* Updated lerna to the latest version

* Updated all packages

* Downgraded tsup to 6.5.0

* Removing NX for now

* Updated vscode engine to 1.79.1

* Do not run slow integration tests on macOS in CICD

* Combined ligo and ligo-regression e2e tests

* Disable tests on macos

--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,14 @@
 {
 	"$schema": "node_modules/lerna/schemas/lerna-schema.json",
-	"useWorkspaces": true,
-	"version": "0.28.6",
+	"version": "0.28.7",
+	"packages": [
+		"taqueria-plugin*",
+		"taqueria-sdk",
+		"taqueria-toolkit",
+		"taqueria-analytics",
+		"taqueria-vscode*",
+		"taqueria-protocol",
+		"tests"
+	],
 	"useNx": false
 }
