--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ concurrency:
   cancel-in-progress: true
 
 env:
-  DENO_VERSION: '1.23.1'
+  DENO_VERSION: '1.34.1'
 
 jobs:
   # When we use reusable we lose the ability to to filter out the workflow for changes to certain paths.
@@ -85,6 +85,13 @@ jobs:
       - name: Setup repo
         uses: actions/checkout@v3
 
+      
+      - name: Setup NodeJS
+        uses: actions/setup-node@v3
+        with:
+          node-version: lts/gallium
+          cache: "npm"
+
       - name: Setup Deno
         uses: denoland/setup-deno@v1
         with:
@@ -115,24 +122,24 @@ jobs:
           fi
           mv "${{ matrix.taqueria_bin }}" "taq.${{ matrix.deno_target }}"
 
-      - name: Authenticate with GCP
-        id: gcp-auth
-        uses: google-github-actions/auth@v0
-        with:
-          workload_identity_provider: "projects/${{ secrets.GCP_PROJECT }}/locations/global/workloadIdentityPools/github-actions-storage-pool/providers/github-actions-oidc-provider"
-          service_account: "${{ secrets.GCP_SERVICE_ACCOUNT }}"
+      # - name: Authenticate with GCP
+      #   id: gcp-auth
+      #   uses: google-github-actions/auth@v0
+      #   with:
+      #     workload_identity_provider: "projects/${{ secrets.GCP_PROJECT }}/locations/global/workloadIdentityPools/github-actions-storage-pool/providers/github-actions-oidc-provider"
+      #     service_account: "${{ secrets.GCP_SERVICE_ACCOUNT }}"
 
-      - name: Upload binary to GCP
-        id: upload-file
-        uses: 'google-github-actions/upload-cloud-storage@v0'
-        with:
-          path: "taq.${{ matrix.deno_target }}"
-          destination: "taqueria-artifacts/${{ github.ref }}"
+      # - name: Upload binary to GCP
+      #   id: upload-file
+      #   uses: 'google-github-actions/upload-cloud-storage@v0'
+      #   with:
+      #     path: "taq.${{ matrix.deno_target }}"
+      #     destination: "taqueria-artifacts/${{ github.ref }}"
 
-      - name: Set public url
-        id: public-url
-        run: |
-          echo "::set-output name=${{ matrix.os_short }}::https://storage.googleapis.com/taqueria-artifacts/${{ steps.upload-file.outputs.uploaded }}"
+      # - name: Set public url
+      #   id: public-url
+      #   run: |
+      #     echo "::set-output name=${{ matrix.os_short }}::https://storage.googleapis.com/taqueria-artifacts/${{ steps.upload-file.outputs.uploaded }}"
 
   gather-info-for-e2e-tests:
     runs-on: ubuntu-latest
@@ -157,7 +164,7 @@ jobs:
       - id: set-test-chunks
         name: Set Chunks
         # Uncomment the line above to run a specific test
-        #run: echo "::set-output name=test-chunks::[[\"tests/e2e/smartpy-plugin-e2e-tests.spec.ts\"]]"
+        #run: echo "::set-output name=test-chunks::[[\"tests/e2e/ligo-plugin-e2e-tests.spec.ts\"]]"
         # Uncomment the line below to run all tests
         run: echo "::set-output name=test-chunks::$(npx jest --listTests --json tests/e2e/ | jq -c '[_nwise(length / 2 | ceil)]')"
 
@@ -181,20 +188,9 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, ecad-macmini]
+        os: [ubuntu-latest]
+        #os: [ubuntu-latest, macos-latest]
         chunk-ids: ${{ fromJson(needs.gather-info-for-e2e-tests.outputs['test-chunk-ids']) }}
-        include:
-        - os: ubuntu-latest
-          url: ${{ needs.build-binaries.outputs.public-url-ubuntu }}
-          final-name: taq
-          make-executable-cmd: chmod +x
-          get-current-dir: echo "$(pwd)"
-        - os: ecad-macmini
-          url: ${{ needs.build-binaries.outputs.public-url-macos }}
-          final-name: taq
-          make-executable-cmd: chmod +x
-          get-current-dir: echo "$(pwd)"
-
     env:
       UNLIMITED_PINATA_TOKEN: ${{ secrets.PINATA_JWT_TOKEN }}
       SCAFFOLDING_PAT: ${{ secrets.SCAFFOLDING_PAT }}
@@ -212,6 +208,10 @@ jobs:
       - uses: denoland/setup-deno@v1
         with:
           deno-version: "${{ env.DENO_VERSION }}"
+
+      - name: Setup Docker (on macos)
+        run: brew install docker colima && colima start --mount-type sshfs
+        if: runner.os == 'macOS'
 
       - name: Add working dir to PATH
         run: echo "$(pwd)" >> $GITHUB_PATH
