--- a/taqueria-plugin-archetype/package.json
+++ b/taqueria-plugin-archetype/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@taqueria/plugin-archetype",
-	"version": "0.28.6",
+	"version": "0.28.7",
 	"description": "A taqueria plugin for compiling Archetype smart contracts",
 	"targets": {
 		"default": {
@@ -21,32 +21,32 @@
 		"taqueria",
 		"tezos",
 		"build",
-		"ecad",
-		"ecadlabs",
+		"pinnaclelabs",
+		"pinnacle-labs",
 		"plugin",
 		"archetype",
 		"smart contract",
 		"compile"
 	],
-	"author": "ECAD Labs",
+	"author": "Pinnacle Labs",
 	"license": "Apache-2.0",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/ecadlabs/taqueria.git",
+		"url": "https://github.com/pinnacle-labs/taqueria.git",
 		"directory": "taqueria-plugin-archetype"
 	},
 	"bugs": {
-		"url": "https://github.com/ecadlabs/taqueria/issues"
+		"url": "https://github.com/pinnacle-labs/taqueria/issues"
 	},
-	"homepage": "https://github.com/ecadlabs/taqueria#readme",
+	"homepage": "https://github.com/pinnacle-labs/taqueria#readme",
 	"dependencies": {
-		"@taqueria/node-sdk": "^0.28.6",
-		"fast-glob": "^3.2.11",
-		"ts-pattern": "^3.3.3"
+		"@taqueria/node-sdk": "^0.28.7",
+		"fast-glob": "^3.2.12",
+		"ts-pattern": "^4.3.0"
 	},
 	"devDependencies": {
-		"tsup": "^6.5.0",
-		"typescript": "^4.7.2"
+		"tsup": "6.5.0",
+		"typescript": "^4.9.5"
 	},
 	"tsup": {
 		"entry": [
