--- a/taqueria-plugin-core/package.json
+++ b/taqueria-plugin-core/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@taqueria/plugin-core",
-	"version": "0.28.6",
+	"version": "0.28.7",
 	"description": "A taqueria plugin for core tasks",
 	"targets": {
 		"default": {
@@ -19,31 +19,31 @@
 	"keywords": [
 		"taqueria",
 		"tezos",
-		"ecad",
-		"ecadlabs",
+		"pinnacle-labs",
+		"pinnaclelabs",
 		"plugin",
 		"core"
 	],
 	"engines": {
 		"node": ">=16"
 	},
-	"author": "ECAD Labs",
+	"author": "Pinnacle Labs",
 	"license": "Apache-2.0",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/ecadlabs/taqueria.git",
+		"url": "https://github.com/pinnacle-labs/taqueria.git",
 		"directory": "taqueria-plugin-core"
 	},
 	"bugs": {
-		"url": "https://github.com/ecadlabs/taqueria/issues"
+		"url": "https://github.com/pinnacle-labs/taqueria/issues"
 	},
-	"homepage": "https://github.com/ecadlabs/taqueria#readme",
+	"homepage": "https://github.com/pinnacle-labs/taqueria#readme",
 	"devDependencies": {
-		"tsup": "^6.5.0",
-		"typescript": "^4.7.2"
+		"tsup": "6.5.0",
+		"typescript": "^4.9.5"
 	},
 	"dependencies": {
-		"@taqueria/node-sdk": "^0.28.6"
+		"@taqueria/node-sdk": "^0.28.7"
 	},
 	"tsup": {
 		"entry": [
