--- a/taqueria-plugin-flextesa/package.json
+++ b/taqueria-plugin-flextesa/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@taqueria/plugin-flextesa",
-	"version": "0.28.6",
+	"version": "0.28.7",
 	"description": "A plugin for Taqueria providing local sandbox capabilities built on Flextesa",
 	"keywords": [
 		"taqueria",
@@ -8,8 +8,8 @@
 		"flextesa",
 		"sandbox",
 		"local",
-		"ecad",
-		"ecadlabs",
+		"pinnaclelabs",
+		"pinnacle-labs",
 		"tezos"
 	],
 	"targets": {
@@ -26,25 +26,25 @@
 		"build": "npx tsc -noEmit -p ./tsconfig.json && npx tsup",
 		"pluginInfo": "npx ts-node index.ts --taqRun pluginInfo --i18n {\"foo:\"\"bar\"}"
 	},
-	"author": "ECAD Labs",
+	"author": "Pinnacle Labs",
 	"license": "Apache-2.0",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/ecadlabs/taqueria.git",
+		"url": "https://github.com/pinnacle-labs/taqueria.git",
 		"directory": "taqueria-plugin-flextesa"
 	},
 	"dependencies": {
-		"@taqueria/node-sdk": "^0.28.6",
-		"@taqueria/protocol": "^0.28.6",
+		"@taqueria/node-sdk": "^0.28.7",
+		"@taqueria/protocol": "^0.28.7",
 		"async-retry": "^1.3.3",
-		"fast-glob": "^3.2.11",
-		"portfinder": "^1.0.28",
-		"rambda": "^7.4.0"
+		"fast-glob": "^3.2.12",
+		"portfinder": "^1.0.32",
+		"rambda": "^7.5.0"
 	},
 	"devDependencies": {
-		"@types/async-retry": "^1.4.4",
-		"tsup": "^6.5.0",
-		"typescript": "^4.7.2"
+		"@types/async-retry": "^1.4.5",
+		"tsup": "6.5.0",
+		"typescript": "^4.9.5"
 	},
 	"tsup": {
 		"entry": [
