--- a/taqueria-plugin-ipfs-pinata/package.json
+++ b/taqueria-plugin-ipfs-pinata/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@taqueria/plugin-ipfs-pinata",
-	"version": "0.28.6",
+	"version": "0.28.7",
 	"description": "A plugin for Taqueria providing ipfs publishing and pinning using the Pinata service",
 	"keywords": [
 		"taqueria",
@@ -8,8 +8,8 @@
 		"jest",
 		"testing",
 		"tdd",
-		"ecad",
-		"ecadlabs",
+		"pinnaclelabs",
+		"pinnacle-labs",
 		"tezos"
 	],
 	"targets": {
@@ -24,24 +24,24 @@
 	"scripts": {
 		"build": "npx tsc -noEmit -p ./tsconfig.json && npx tsup"
 	},
-	"author": "ECAD Labs",
+	"author": "Pinnacle Labs",
 	"license": "Apache-2.0",
 	"type": "module",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/ecadlabs/taqueria.git",
+		"url": "https://github.com/pinnacle-labs/taqueria.git",
 		"directory": "taqueria-plugin-ipfs-pinata"
 	},
 	"dependencies": {
-		"@taqueria/node-sdk": "^0.28.6",
-		"dotenv": "^16.0.0",
+		"@taqueria/node-sdk": "^0.28.7",
+		"dotenv": "^16.3.1",
 		"form-data": "^4.0.0",
 		"ipfs-only-hash": "^4.0.0",
-		"node-fetch": "^2.6.7"
+		"node-fetch": "^2.6.11"
 	},
 	"devDependencies": {
-		"@types/node-fetch": "^2.6.1",
-		"tsup": "^6.5.0",
+		"@types/node-fetch": "^2.6.4",
+		"tsup": "6.5.0",
 		"typescript": "4.7.2"
 	},
 	"tsup": {
