--- a/taqueria-plugin-jest/package.json
+++ b/taqueria-plugin-jest/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@taqueria/plugin-jest",
-	"version": "0.28.6",
+	"version": "0.28.7",
 	"main": "index.cjs",
 	"module": "index.js",
 	"source": "index.ts",
@@ -12,37 +12,37 @@
 		"jest",
 		"testing",
 		"tdd",
-		"ecad",
-		"ecadlabs",
+		"pinnaclelabs",
+		"pinnacle-labs",
 		"tezos"
 	],
 	"scripts": {
 		"build": "npx tsc -noEmit -p ./tsconfig.json && npx tsup"
 	},
-	"author": "ECAD Labs",
+	"author": "Pinnacle Labs",
 	"license": "Apache-2.0",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/ecadlabs/taqueria.git",
+		"url": "https://github.com/pinnacle-labs/taqueria.git",
 		"directory": "taqueria-plugin-jest"
 	},
 	"dependencies": {
-		"@taqueria/node-sdk": "^0.28.6",
-		"@taqueria/plugin-contract-types": "^0.28.6",
-		"@taquito/signer": "^16.0.1",
-		"@taquito/taquito": "^16.0.1",
-		"@taquito/utils": "^16.0.1",
+		"@taqueria/node-sdk": "^0.28.7",
+		"@taqueria/plugin-contract-types": "^0.28.7",
+		"@taquito/signer": "^16.2.0",
+		"@taquito/taquito": "^16.2.0",
+		"@taquito/utils": "^16.2.0",
 		"@types/jest": "^27.5.2",
 		"async-retry": "^1.3.3",
-		"bignumber.js": "^9.1.0",
+		"bignumber.js": "^9.1.1",
 		"execa": "^6.1.0",
-		"fast-glob": "^3.2.7",
-		"jest-config": "^28.1.0",
+		"fast-glob": "^3.2.12",
+		"jest-config": "^28.1.3",
 		"ts-jest": "^28.0.8"
 	},
 	"devDependencies": {
-		"@types/async-retry": "^1.3.3",
-		"tsup": "^6.5.0",
+		"@types/async-retry": "^1.4.5",
+		"tsup": "6.5.0",
 		"typescript": "4.7.2"
 	},
 	"tsup": {
