--- a/taqueria-plugin-tezos-client/package.json
+++ b/taqueria-plugin-tezos-client/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@taqueria/plugin-tezos-client",
-	"version": "0.28.6",
+	"version": "0.28.7",
 	"description": "A taqueria plugin for utilizing tezos-client",
 	"targets": {
 		"default": {
@@ -19,8 +19,8 @@
 		"taqueria",
 		"tezos",
 		"build",
-		"ecad",
-		"ecadlabs",
+		"pinnaclelabs",
+		"pinnacle-labs",
 		"plugin",
 		"tezos-client",
 		"typecheck",
@@ -29,24 +29,24 @@
 	"engines": {
 		"node": ">=16"
 	},
-	"author": "ECAD Labs",
+	"author": "Pinnacle Labs",
 	"license": "Apache-2.0",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/ecadlabs/taqueria.git",
+		"url": "https://github.com/pinnacle-labs/taqueria.git",
 		"directory": "taqueria-plugin-tezos-client"
 	},
 	"bugs": {
-		"url": "https://github.com/ecadlabs/taqueria/issues"
+		"url": "https://github.com/pinnacle-labs/taqueria/issues"
 	},
-	"homepage": "https://github.com/ecadlabs/taqueria#readme",
+	"homepage": "https://github.com/pinnacle-labs/taqueria#readme",
 	"dependencies": {
-		"@taqueria/node-sdk": "^0.28.6",
-		"fast-glob": "^3.2.7"
+		"@taqueria/node-sdk": "^0.28.7",
+		"fast-glob": "^3.2.12"
 	},
 	"devDependencies": {
-		"tsup": "^6.5.0",
-		"typescript": "^4.7.2"
+		"tsup": "6.5.0",
+		"typescript": "^4.9.5"
 	},
 	"tsup": {
 		"entry": [
