--- a/taqueria-sdk/package.json
+++ b/taqueria-sdk/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@taqueria/node-sdk",
-	"version": "0.28.6",
+	"version": "0.28.7",
 	"description": "A TypeScript SDK for NodeJS used for Taqueria plugin development.",
 	"main": "./index.js",
 	"source": "./index.ts",
@@ -19,41 +19,41 @@
 		"build",
 		"test",
 		"deploy",
-		"ecad",
-		"ecadlabs"
+		"pinnaclelabs",
+		"pinnacle-labs"
 	],
-	"author": "ECAD Labs",
+	"author": "Pinnacle Labs",
 	"license": "Apache-2.0",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/ecadlabs/taqueria.git",
+		"url": "https://github.com/pinnacle-labs/taqueria.git",
 		"directory": "taqueria-sdk"
 	},
 	"bugs": {
-		"url": "https://github.com/ecadlabs/taqueria/issues"
+		"url": "https://github.com/pinnacle-labs/taqueria/issues"
 	},
-	"homepage": "https://github.com/ecadlabs/taqueria#readme",
+	"homepage": "https://github.com/pinnacle-labs/taqueria#readme",
 	"dependencies": {
-		"@taqueria/protocol": "^0.28.6",
+		"@taqueria/protocol": "^0.28.7",
 		"@taquito/signer": "^15.0.0",
 		"@taquito/taquito": "^15.0.0",
 		"@taquito/utils": "^15.0.0",
-		"i18next": "^21.8.4",
-		"node-fetch": "^2.6.7",
+		"i18next": "^21.10.0",
+		"node-fetch": "^2.6.11",
 		"project-name-generator": "^2.1.9",
-		"rambda": "^7.1.4",
+		"rambda": "^7.5.0",
 		"stacktrace-js": "^2.0.2",
-		"ts-pattern": "^4.0.2",
-		"yargs": "^17.5.1",
-		"zod": "^3.17.3"
+		"ts-pattern": "^5.0.1",
+		"yargs": "^17.7.2",
+		"zod": "^3.21.4"
 	},
 	"devDependencies": {
 		"@bevry/jsonfile": "^1.3.0",
 		"@types/node": "^17.0.12",
 		"@types/project-name-generator": "^2.1.1",
-		"@types/yargs": "^17.0.7",
-		"tsup": "^6.5.0",
-		"typescript": "^4.7.2"
+		"@types/yargs": "^17.0.24",
+		"tsup": "6.5.0",
+		"typescript": "^4.9.5"
 	},
 	"tsup": {
 		"entry": [
