--- a/taqueria-toolkit/package.json
+++ b/taqueria-toolkit/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@taqueria/toolkit",
-	"version": "0.28.6",
+	"version": "0.28.7",
 	"description": "A TypeScript library for NodeJS to work with Taqueria projects",
 	"source": "./index.ts",
 	"main": "./index.js",
@@ -15,31 +15,31 @@
 	"keywords": [
 		"taqueria",
 		"tezos",
-		"ecad",
+		"pinnaclelabs",
 		"ecadlabs"
 	],
-	"author": "ECAD Labs",
+	"author": "Pinnacle Labs",
 	"license": "Apache-2.0",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/ecadlabs/taqueria.git",
+		"url": "https://github.com/pinnacle-labs/taqueria.git",
 		"directory": "taqueria-toolkit"
 	},
 	"bugs": {
-		"url": "https://github.com/ecadlabs/taqueria/issues"
+		"url": "https://github.com/pinnacle-labs/taqueria/issues"
 	},
-	"homepage": "https://github.com/ecadlabs/taqueria#readme",
+	"homepage": "https://github.com/pinnacle-labs/taqueria#readme",
 	"devDependencies": {
 		"@types/cross-spawn": "^6.0.2",
 		"@types/node": "^17.0.12",
-		"@types/yargs": "^17.0.19",
-		"tsup": "^6.5.0",
-		"typescript": "^4.7.2"
+		"@types/yargs": "^17.0.24",
+		"tsup": "6.5.0",
+		"typescript": "^4.9.5"
 	},
 	"dependencies": {
-		"@taqueria/protocol": "^0.28.6",
+		"@taqueria/protocol": "^0.28.7",
 		"cross-spawn": "^7.0.3",
-		"yargs": "^17.6.2"
+		"yargs": "^17.7.2"
 	},
 	"tsup": [
 		{
