Modified build task for vscode extension to create vsix package

--- a/.gitignore
+++ b/.gitignore
@@ -171,3 +171,6 @@ taqueria-protocol/**/*.mjs
 tests/e2e/auto-test-*
 tests/scrap
 tests/unit/taqueria-sdk/temp
+
+# Packaged vscode extensions
+/**/*.vsix
