--- a/taqueria-vscode-extension/package.json
+++ b/taqueria-vscode-extension/package.json
@@ -704,6 +704,7 @@
 		"compile": "npx tsc -noEmit && npm run compile:base -- --sourcemap",
 		"compile:watch": "npm run compile:base -- --sourcemap --watch",
 		"compile:test": "tsc -p tsconfig.test.json",
+		"build": "npm run compile && npx vsce package",
 		"pretest": "npm run compile:test",
 		"lint": "eslint src --ext ts",
 		"test": "./bin/run-tests.sh"
@@ -720,6 +721,7 @@
 		"@typescript-eslint/eslint-plugin": "^5.60.0",
 		"@typescript-eslint/parser": "^5.60.0",
 		"@vscode/test-electron": "^2.3.3",
+		"@vscode/vsce": "^2.19.0",
 		"esbuild": "^0.14.54",
 		"eslint": "^8.43.0",
 		"fs-extra": "^10.1.0",
