--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -75,8 +75,7 @@ jobs:
            taqueria_bin: "taq"
 
     outputs:
-      public-url-ubuntu: ${{ steps.public-url.outputs.ubuntu }}
-      public-url-macos: ${{ steps.public-url.outputs.macos }}
+      artifact_urls: ${{ steps.public-url.outputs.artifact_urls }}
 
     env:
       DENO_TARGET: ${{ matrix.deno_target }}
@@ -122,24 +121,28 @@ jobs:
           fi
           mv "${{ matrix.taqueria_bin }}" "taq.${{ matrix.deno_target }}"
 
-      # - name: Authenticate with GCP
-      #   id: gcp-auth
-      #   uses: google-github-actions/auth@v0
-      #   with:
-      #     workload_identity_provider: "projects/${{ secrets.GCP_PROJECT }}/locations/global/workloadIdentityPools/github-actions-storage-pool/providers/github-actions-oidc-provider"
-      #     service_account: "${{ secrets.GCP_SERVICE_ACCOUNT }}"
 
-      # - name: Upload binary to GCP
-      #   id: upload-file
-      #   uses: 'google-github-actions/upload-cloud-storage@v0'
-      #   with:
-      #     path: "taq.${{ matrix.deno_target }}"
-      #     destination: "taqueria-artifacts/${{ github.ref }}"
+      - name: Upload binary as artifact
+        id: upload-file
+        uses: actions/upload-artifact@v2
+        with:
+          name: taq
+          path: ${{ matrix.deno_target }}/taq
+          if-no-files-found: error
 
-      # - name: Set public url
-      #   id: public-url
-      #   run: |
-      #     echo "::set-output name=${{ matrix.os_short }}::https://storage.googleapis.com/taqueria-artifacts/${{ steps.upload-file.outputs.uploaded }}"
+      - name: Get artifact download URLs
+        id: public-url
+        run: |
+          OWNER=$(echo $GITHUB_REPOSITORY | cut -d'/' -f1)
+          REPO=$(echo $GITHUB_REPOSITORY | cut -d'/' -f2)
+          RUN_ID=$GITHUB_RUN_ID
+          TOKEN=$GITHUB_TOKEN
+
+          RESPONSE=$(curl -H "Authorization: token $TOKEN" \
+            "https://api.github.com/repos/$OWNER/$REPO/actions/runs/$RUN_ID/artifacts")
+
+          ARTIFACT_URLS=$(echo $RESPONSE | jq -r '.artifacts[] | "<a href=\"\(.archive_download_url)\">\(.name)</a>"')
+          echo "::set-output name=artifact_urls::$ARTIFACT_URLS"
 
   gather-info-for-e2e-tests:
     runs-on: ubuntu-latest
@@ -386,8 +389,7 @@ jobs:
                   <th scope="row">Taq Binaries</th>
                   <td>
                       <p>
-                          <a href="${{ needs.build-binaries.outputs.public-url-ubuntu }}">Linux</a><br>
-                          <a href="${{ needs.build-binaries.outputs.public-url-macos }}">MacOS</a><br>
+                          ${{ needs.build-binaries.outputs.public-url-artifact_urls }}
                       </p>
                   </td>
                 </tr>
