--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -23,4 +23,5 @@ jobs:
 
             - name: Build Binaries
               run: |
+                npm run build-types
                 npm run build:binary
