--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -37,7 +37,7 @@ jobs:
                 npm run build:binary
                 
             - name: Save Deno Cache
-              uses: actions/cache/save@3
+              uses: actions/cache/save@v3
               with:
                 path: ${{ env.DENO_DIR }}
                 key: ${{ runner.os }}-deno-${{ hashFiles('deno-lock.json') }}
