--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -42,6 +42,12 @@ jobs:
         with:
           path: ${{ env.DENO_DIR }}
           key: ${{ runner.os }}-deno-${{ hashFiles('deno-lock.json') }}
+
+      - name: Store artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: taq-${{ matrix.os }}
+          path: taq
   
   list-e2e-tests:
     runs-on: ubuntu-latest
@@ -79,7 +85,23 @@ jobs:
     needs: build-binaries
     runs-on: ubuntu-latest
     steps:
-      - name: Run unit tests
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - uses: actions/setup-node@v3
+        with:
+          node-version: lts/gallium
+          cache: "npm"
+
+      - name: Restore taq binary from artifacts
+        uses: actions/download-artifact@v2
+        with:
+          name: taq-ubuntu-latest
+          path: taq
+          
+      - name: Run tests
+        env:
+          PATH: ${{ github.workspace }}/taq:$PATH
         run: npm run test:unit -w tests
 
   run-integration-tests:
@@ -90,8 +112,24 @@ jobs:
     strategy:
       matrix: ${{fromJson(needs.list-integration-tests.outputs.matrix)}}
     steps:
-      - name: Run E2E tests
-        run: npm run test:e2e -w tests ${{ matrix.spec }}        
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - uses: actions/setup-node@v3
+        with:
+          node-version: lts/gallium
+          cache: "npm"
+
+      - name: Restore taq binary from artifacts
+        uses: actions/download-artifact@v2
+        with:
+          name: taq-ubuntu-latest
+          path: taq
+
+      - name: Run tests
+        env:
+          PATH: ${{ github.workspace }}/taq:$PATH
+        run: npm ci && npm run test:e2e -w tests ${{ matrix.spec }}        
 
   run-e2e-tests:
     needs:
@@ -101,5 +139,21 @@ jobs:
     strategy:
       matrix: ${{fromJson(needs.list-e2e-tests.outputs.matrix)}}
     steps:
-      - name: Run E2E tests
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - uses: actions/setup-node@v3
+        with:
+          node-version: lts/gallium
+          cache: "npm"
+
+      - name: Restore taq binary from artifacts
+        uses: actions/download-artifact@v2
+        with:
+          name: taq-ubuntu-latest
+          path: taq
+
+      - name: Run tests
+        env:
+          PATH: ${{ github.workspace }}/taq:$PATH
         run: npm run test:e2e -w tests ${{ matrix.spec }}
