--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -53,7 +53,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: work-${{ matrix.os }}
-          path: work
+          path: .
           retention-days: 1
 
   list-e2e-tests:
