--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -110,66 +110,71 @@ jobs:
       
       - name: Restore work directory
         run: tar -xzf ${{ runner.temp }}/work.tar.gz
+
+      - name: List work directory
+        run: |
+          FILES=`ls -lRa ${{ runner.temp }}}`
+          echo "::set-output name=files::$FILES"
           
       - name: Run tests
         env:
           PATH: ${{ github.workspace }}/taq:$PATH
         run: npm run test:unit -w tests
 
-  run-integration-tests:
-    needs:
-      - list-integration-tests
-      - build-binaries
-    runs-on: ubuntu-latest
-    strategy:
-      matrix: ${{fromJson(needs.list-integration-tests.outputs.matrix)}}
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+  # run-integration-tests:
+  #   needs:
+  #     - list-integration-tests
+  #     - build-binaries
+  #   runs-on: ubuntu-latest
+  #   strategy:
+  #     matrix: ${{fromJson(needs.list-integration-tests.outputs.matrix)}}
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v3
 
-      - uses: actions/setup-node@v3
-        with:
-          node-version: lts/gallium
+  #     - uses: actions/setup-node@v3
+  #       with:
+  #         node-version: lts/gallium
 
-      - name: Download work archive
-        uses: actions/download-artifact@v2
-        with:
-          name: work-ubuntu-latest
-          path: ${{ runner.temp }}/work.tar.gz
+  #     - name: Download work archive
+  #       uses: actions/download-artifact@v2
+  #       with:
+  #         name: work-ubuntu-latest
+  #         path: ${{ runner.temp }}/work.tar.gz
         
-      - name: Restore work directory
-        run: tar -xzf ${{ runner.temp }}/work.tar.gz
+  #     - name: Restore work directory
+  #       run: tar -xzf ${{ runner.temp }}/work.tar.gz
 
-      - name: Run tests
-        env:
-          PATH: ${{ github.workspace }}/taq:$PATH
-        run: npm ci && npm run test:e2e -w tests ${{ matrix.spec }}        
+  #     - name: Run tests
+  #       env:
+  #         PATH: ${{ github.workspace }}/taq:$PATH
+  #       run: npm ci && npm run test:e2e -w tests ${{ matrix.spec }}        
 
-  run-e2e-tests:
-    needs:
-      - list-e2e-tests
-      - build-binaries
-    runs-on: ubuntu-latest
-    strategy:
-      matrix: ${{fromJson(needs.list-e2e-tests.outputs.matrix)}}
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+  # run-e2e-tests:
+  #   needs:
+  #     - list-e2e-tests
+  #     - build-binaries
+  #   runs-on: ubuntu-latest
+  #   strategy:
+  #     matrix: ${{fromJson(needs.list-e2e-tests.outputs.matrix)}}
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v3
 
-      - uses: actions/setup-node@v3
-        with:
-          node-version: lts/gallium
+  #     - uses: actions/setup-node@v3
+  #       with:
+  #         node-version: lts/gallium
 
-      - name: Download work archive
-        uses: actions/download-artifact@v2
-        with:
-          name: work-ubuntu-latest
-          path: ${{ runner.temp }}/work.tar.gz
+  #     - name: Download work archive
+  #       uses: actions/download-artifact@v2
+  #       with:
+  #         name: work-ubuntu-latest
+  #         path: ${{ runner.temp }}/work.tar.gz
       
-      - name: Restore work directory
-        run: tar -xzf ${{ runner.temp }}/work.tar.gz
+  #     - name: Restore work directory
+  #       run: tar -xzf ${{ runner.temp }}/work.tar.gz
 
-      - name: Run tests
-        env:
-          PATH: ${{ github.workspace }}/taq:$PATH
-        run: npm ci && npm run test:e2e -w tests ${{ matrix.spec }}
+  #     - name: Run tests
+  #       env:
+  #         PATH: ${{ github.workspace }}/taq:$PATH
+  #       run: npm ci && npm run test:e2e -w tests ${{ matrix.spec }}
