--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -104,6 +104,12 @@ jobs:
         with:
           node-version: lts/gallium
 
+      - name: Create temp directory for work
+        run: |
+          if [ ! -d "${{ runner.temp }}" ]; then
+            mkdir -p ${{ runner.temp }}
+          fi
+
       - name: Download work archive
         uses: actions/download-artifact@v2
         with:
