--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -118,7 +118,7 @@ jobs:
       
       - name: List work directory
         run: |
-          FILES=`ls -lRa ${{ runner.temp }}}`
+          FILES=`ls -lR ${{ runner.temp }}}/*`
           echo "::set-output name=files::$FILES"
 
       - name: Restore work directory
