--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -114,15 +114,15 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: work-ubuntu-latest
-          path: ${{ runner.temp }}/work.tar.gz
+          path: work.tar.gz
       
       - name: List work directory
         run: |
-          FILES=`ls -lR ${{ runner.temp }}}/*`
+          FILES=`ls -lR*`
           echo "::set-output name=files::$FILES"
 
       - name: Restore work directory
-        run: tar -xzf ${{ runner.temp }}/work.tar.gz
+        run: tar -xzf work.tar.gz
 
       
           
