--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -119,6 +119,11 @@ jobs:
         with:
           name: work-ubuntu-latest
           path: work.tar.gz
+
+      - name: Debug
+        run: |
+          pwd
+          ls -la
           
       - name: Run tests
         env:
