--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -51,7 +51,7 @@ jobs:
 
       - name: Create archive of work
         if: ${{ matrix.os == 'ubuntu-latest' }}
-        run: tar -czpf work.tar.gz .
+        run: tar --exclude=work.tar.gz -czpf work.tar.gz .
 
       - name: Store work
         if: ${{ matrix.os == 'ubuntu-latest' }}
