Attempt to fix creating work archive

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -51,7 +51,14 @@ jobs:
 
       - name: Create archive of work
         if: ${{ matrix.os == 'ubuntu-latest' }}
-        run: tar --exclude=work.tar.gz --warning=no-file-changed -czpf work.tar.gz .
+        run: |
+          set +e
+          tar --warning=no-file-changed -czpf work.tar.gz .
+          exitcode=$?
+          if [ "$exitcode" != "1" ] && [ "$exitcode" != "0" ]; then
+            exit $exitcode
+          fi
+          set -e
 
       - name: Store work
         if: ${{ matrix.os == 'ubuntu-latest' }}
