Adjust how tests are executed

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -142,11 +142,11 @@ jobs:
           echo $PATH
           which docker
           which env
-          
+
       - name: Run tests
         env:
           PATH: ${{ github.workspace }}/taq:$PATH
-        run: npm run test:unit -w tests
+        run: cd tests && npm run test:unit
 
   # run-integration-tests:
   #   needs:
