Fix to debug logs

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -143,7 +143,7 @@ jobs:
         continue-on-error: true
 
       - name: Debug
-        run: cat .npm/_logs/*-debug.log
+        run: cat /home/runner/.npm/_logs/*-debug.log
 
   # run-integration-tests:
   #   needs:
