--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -130,6 +130,9 @@ jobs:
       - name: Extract work archive
         run: tar -xzf work.tar.gz
 
+      - name: Before tests
+        run: ls -l ../bin
+
       - name: Run tests
         env:
           PATH: ${{ github.workspace }}/taq:$PATH
