--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -121,6 +121,12 @@ jobs:
 
       - uses: denoland/setup-deno@v1
 
+      - name: Restore Deno Cache
+        uses: actions/cache/restore@v3
+        with:
+          path: ${{ env.DENO_DIR }}
+          key: ${{ runner.os }}-deno-${{ hashFiles('deno-lock.json') }}
+
       - name: Download work archive
         uses: actions/download-artifact@v2
         with:
@@ -129,9 +135,6 @@ jobs:
 
       - name: Extract work archive
         run: tar -xzf work.tar.gz
-
-      - name: Before tests
-        run: cd tests && ls -l ../bin
 
       - name: Run tests
         env:
