Fix deno when running tests

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -114,6 +114,8 @@ jobs:
   run-unit-tests:
     needs: build-binaries
     runs-on: ubuntu-latest
+    env:
+      DENO_DIR: ./.deno
     steps:
       - uses: actions/setup-node@v3
         with:
